TFB-003 add books endpoint